--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>TEST DOC</title>
+    <link rel="stylesheet" href="<% assetPath %>/css/main.css">
 </head>
 <body>
     <header class="Header">
         <a class="Header-logo" href="/"><h1 class="Header-name">Eric SSSSSS</h1></a>
         <nav class="Nav">
             <ul class="Nav-list">
+                <p><% assetPath %></p>
                 <li class="Nav-item"><a class="Nav-link" href="#">Work</a></li>
                 <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li>
             </ul>
