Added font stacks and fixed StyleLint file exclusion.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>TEST DOC</title>
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Karla:400,700/Fira+Mono:400/Crimson:400,600,400i,600i">
     <link rel="stylesheet" href="<% assetPath %>/css/main.css">
+    <script src="<% assetPath %>/js/main.js" async></script>
 </head>
 <body>
     <header class="Header">
-        <a class="Header-logo" href="/"><h1 class="Header-name">Eric SSSSSS</h1></a>
+        <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
         <nav class="Nav">
             <ul class="Nav-list">
-                <p><% assetPath %></p>
                 <li class="Nav-item"><a class="Nav-link" href="#">Work</a></li>
                 <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li>
             </ul>
@@ -22,7 +23,7 @@
                 <li class="GridItem">
                     <a class="GridItem-link" href="#">
                         <div class="GridItem-description">
-                            <h2 class="GridItem-title">Some Project</h2>
+                            <h2 class="GridItem-title">Pro Referral</h2>
                             <p class="GridItem-description">Some Description</p>
                         </div>
                         <img class="GridItem-photo" src="#" alt="Some Project" />
@@ -31,7 +32,7 @@
                 <li class="GridItem">
                     <a class="GridItem-link" href="#">
                         <div class="GridItem-description">
-                            <h2 class="GridItem-title">Some Project</h2>
+                            <h2 class="GridItem-title">College Registration Concept</h2>
                             <p class="GridItem-description">Some Description</p>
                         </div>
                         <img class="GridItem-photo" src="#" alt="Some Project" />
@@ -40,7 +41,7 @@
                 <li class="GridItem">
                     <a class="GridItem-link" href="#">
                         <div class="GridItem-description">
-                            <h2 class="GridItem-title">Some Project</h2>
+                            <h2 class="GridItem-title">Macys Mobile App</h2>
                             <p class="GridItem-description">Some Description</p>
                         </div>
                         <img class="GridItem-photo" src="#" alt="Some Project" />
@@ -49,7 +50,7 @@
                 <li class="GridItem">
                     <a class="GridItem-link" href="#">
                         <div class="GridItem-description">
-                            <h2 class="GridItem-title">Some Project</h2>
+                            <h2 class="GridItem-title">CF Napa</h2>
                             <p class="GridItem-description">Some Description</p>
                         </div>
                         <img class="GridItem-photo" src="#" alt="Some Project" />
