Scaffold additional CSS and begin header UI.

--- a/index.html
+++ b/index.html
@@ -9,55 +9,56 @@
 </head>
 <body>
     <header class="Header">
-        <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
-        <nav class="Nav">
-            <ul class="Nav-list">
+        <!-- <section class="Container"> -->
+            <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
+            <ul class="Nav">
                 <li class="Nav-item"><a class="Nav-link" href="#">Work</a></li>
                 <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li>
             </ul>
-        </nav>
+        <!-- </section> -->
     </header>
     <div class="Content">
-        <section class="ProjectGrid">
-            <ul class="ProjectGrid-list">
-                <li class="GridItem">
-                    <a class="GridItem-link" href="#">
-                        <div class="GridItem-description">
-                            <h2 class="GridItem-title">Pro Referral</h2>
-                            <p class="GridItem-description">Some Description</p>
-                        </div>
-                        <img class="GridItem-photo" src="#" alt="Some Project" />
-                    </a>
-                </li>
-                <li class="GridItem">
-                    <a class="GridItem-link" href="#">
-                        <div class="GridItem-description">
-                            <h2 class="GridItem-title">College Registration Concept</h2>
-                            <p class="GridItem-description">Some Description</p>
-                        </div>
-                        <img class="GridItem-photo" src="#" alt="Some Project" />
-                    </a>
-                </li>
-                <li class="GridItem">
-                    <a class="GridItem-link" href="#">
-                        <div class="GridItem-description">
-                            <h2 class="GridItem-title">Macys Mobile App</h2>
-                            <p class="GridItem-description">Some Description</p>
-                        </div>
-                        <img class="GridItem-photo" src="#" alt="Some Project" />
-                    </a>
-                </li>
-                <li class="GridItem">
-                    <a class="GridItem-link" href="#">
-                        <div class="GridItem-description">
-                            <h2 class="GridItem-title">CF Napa</h2>
-                            <p class="GridItem-description">Some Description</p>
-                        </div>
-                        <img class="GridItem-photo" src="#" alt="Some Project" />
-                    </a>
-                </li>
-            </ul>
-        </section>
+        <ul class="ProjectGrid">
+            <li class="GridItem">
+                <a class="GridItem-link" href="#">
+                    <div class="GridItem-description">
+                        <h2 class="GridItem-title">Pro Referral</h2>
+                        <p class="GridItem-description">Some Description</p>
+                    </div>
+                    <img class="GridItem-photo" src="#" alt="Some Project" />
+                </a>
+            </li>
+            <li class="GridItem GridItem--registration">
+                <a class="GridItem-link" href="#">
+                    <div class="GridItem-photo">
+                        <img src="#" alt="Some Project" />
+                    </div>
+                    <div class="GridItem-description">
+                        <h2 class="GridItem-title">Concept: College Registration</h2>
+                        <p class="GridItem-description">Some Description</p>
+                    </div>
+
+                </a>
+            </li>
+            <li class="GridItem">
+                <a class="GridItem-link" href="#">
+                    <div class="GridItem-description">
+                        <h2 class="GridItem-title">Macys Mobile App</h2>
+                        <p class="GridItem-description">Some Description</p>
+                    </div>
+                    <img class="GridItem-photo" src="#" alt="Some Project" />
+                </a>
+            </li>
+            <li class="GridItem">
+                <a class="GridItem-link" href="#">
+                    <div class="GridItem-description">
+                        <h2 class="GridItem-title">CF Napa</h2>
+                        <p class="GridItem-description">Some Description</p>
+                    </div>
+                    <img class="GridItem-photo" src="#" alt="Some Project" />
+                </a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
