Finish thumbnails for Pro Referral and Registration projects.

--- a/index.html
+++ b/index.html
@@ -29,17 +29,31 @@
                     <img class="GridItem-photo" src="#" alt="Some Project" />
                 </a>
             </li> -->
+            <li class="GridItem GridItem--proreferral">
+                <a class="GridItem-link ProReferral" href="/projects/proreferral/">
+                    <div class="ProReferral-device">
+                        <div class="ProReferral-cardArea">
+                            <div class="ProReferral-card ProReferral-card--1"></div>
+                            <div class="ProReferral-card ProReferral-card--2"></div>
+                            <div class="ProReferral-card ProReferral-card--3"></div>
+                            <div class="ProReferral-card ProReferral-card--4"></div>
+                        </div>
+                    </div>
+                    <div class="ProReferral-bg"></div>
+                    <div class="GridItem-info">
+                        <h2 class="GridItem-title">Pro Referral</h2>
+                        <div class="GridItem-description">UI / UX / Prototyping</div>
+                    </div>
+                </a>
+            </li>
             <li class="GridItem GridItem--registration">
-                <a class="GridItem-link" href="#">
-                    <div class="GridItem-photo Registration">
-                        <!-- <div class="Registration-logo"></div> -->
-                        <div class="Registration-bg"></div>
-                    </div>
-                    <div class="GridItem-description">
+                <a class="GridItem-link Registration" href="#">
+                    <div class="Registration-logo"></div>
+                    <div class="Registration-bg"></div>
+                    <div class="GridItem-info">
                         <h2 class="GridItem-title">Concept: College Registration</h2>
-                        <p class="GridItem-description">Some Description</p>
+                        <div class="GridItem-description">UI / UX</div>
                     </div>
-
                 </a>
             </li>
             <!-- <li class="GridItem">
@@ -61,6 +75,14 @@
                 </a>
             </li> -->
         </ul>
+        <div class="ExpandTestWrapper">
+            <div data-row="Search-Results" class="ExpandImg">
+                <img src="<% assetPath %>/images/Registration-Search-Results.jpg" alt="">
+            </div>
+            <div data-row="Search-Results" class="ExpandOtherShit">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quibusdam non dolorem sit mollitia est. Amet quo inventore repellendus porro illum est cum vel a non quis, pariatur perferendis enim.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
