Begin CF Napa thumbnail and implement sticky header.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TEST DOC</title>
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Karla:400,700/Fira+Mono:400/Crimson:400,600,400i,600i">
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
     <link rel="stylesheet" href="<% assetPath %>/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
     <script src="<% assetPath %>/js/main.js" defer></script>
@@ -20,15 +20,6 @@
     </header>
     <div class="Content">
         <ul class="ProjectGrid">
-            <!-- <li class="GridItem">
-                <a class="GridItem-link" href="#">
-                    <div class="GridItem-description">
-                        <h2 class="GridItem-title">Pro Referral</h2>
-                        <p class="GridItem-description">Some Description</p>
-                    </div>
-                    <img class="GridItem-photo" src="#" alt="Some Project" />
-                </a>
-            </li> -->
             <li class="GridItem GridItem--proreferral">
                 <a class="GridItem-link ProReferral" href="/projects/proreferral/">
                     <div class="ProReferral-device">
@@ -53,6 +44,19 @@
                     <div class="GridItem-info">
                         <h2 class="GridItem-title">Concept: College Registration</h2>
                         <div class="GridItem-description">UI / UX</div>
+                    </div>
+                </a>
+            </li>
+            <li class="GridItem GridItem--cfnapa">
+                <a class="GridItem-link CFN" href="#">
+                    <!-- <div class="CFN-logo"></div> -->
+                    <div class="CFN-scrollContainer">
+                        <div class="CFN-scroller"></div>
+                    </div>
+                    <div class="CFN-bg"></div>
+                    <div class="GridItem-info">
+                        <h2 class="GridItem-title">CF Napa Brand Design</h2>
+                        <div class="GridItem-description">Development</div>
                     </div>
                 </a>
             </li>
