Finalize thumbnails for landing page.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </a>
             </li>
             <li class="GridItem GridItem--registration">
-                <a class="GridItem-link Registration" href="#">
+                <a class="GridItem-link Registration" href="/projects/registration/">
                     <div class="Registration-logo"></div>
                     <div class="Registration-bg"></div>
                     <div class="GridItem-info">
@@ -48,11 +48,9 @@
                 </a>
             </li>
             <li class="GridItem GridItem--cfnapa">
-                <a class="GridItem-link CFN" href="#">
-                    <!-- <div class="CFN-logo"></div> -->
-                    <div class="CFN-scrollContainer">
+                <a class="GridItem-link CFN" href="/projects/cfnapa/">
+                    <div class="CFN-logo"></div>
                         <div class="CFN-scroller"></div>
-                    </div>
                     <div class="CFN-bg"></div>
                     <div class="GridItem-info">
                         <h2 class="GridItem-title">CF Napa Brand Design</h2>
@@ -60,33 +58,37 @@
                     </div>
                 </a>
             </li>
-            <!-- <li class="GridItem">
-                <a class="GridItem-link" href="#">
-                    <div class="GridItem-description">
-                        <h2 class="GridItem-title">Macys Mobile App</h2>
-                        <p class="GridItem-description">Some Description</p>
+            <li class="GridItem GridItem--macys">
+                <a class="GridItem-link Macys" href="/projects/macys/">
+                    <div class="Macys-tooltip"></div>
+                    <div class="Macys-bg"></div>
+                    <div class="GridItem-info">
+                        <h2 class="GridItem-title">Macy's.com Mobile App</h2>
+                        <p class="GridItem-description">UI / UX / Prototyping</p>
                     </div>
-                    <img class="GridItem-photo" src="#" alt="Some Project" />
                 </a>
             </li>
-            <li class="GridItem">
-                <a class="GridItem-link" href="#">
-                    <div class="GridItem-description">
-                        <h2 class="GridItem-title">CF Napa</h2>
-                        <p class="GridItem-description">Some Description</p>
+            <li class="GridItem GridItem--recipes">
+                <a class="GridItem-link Recipes" href="#">
+                    <div class="Recipes-logoBlock"><div class="Recipes-logoMark"></div></div>
+                    <div class="Recipes-logoType"></div>
+                    <div class="Recipes-placeholder">Coming Soon</div>
+                    <div class="Recipes-bg"></div>
+                    <div class="GridItem-info">
+                        <h2 class="GridItem-title">Recipes</h2>
+                        <p class="GridItem-description">UI / UX / Development</p>
                     </div>
-                    <img class="GridItem-photo" src="#" alt="Some Project" />
                 </a>
-            </li> -->
+            </li>
         </ul>
-        <div class="ExpandTestWrapper">
+        <!-- <div class="ExpandTestWrapper">
             <div data-row="Search-Results" class="ExpandImg">
                 <img src="<% assetPath %>/images/Registration-Search-Results.jpg" alt="">
             </div>
             <div data-row="Search-Results" class="ExpandOtherShit">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quibusdam non dolorem sit mollitia est. Amet quo inventore repellendus porro illum est cum vel a non quis, pariatur perferendis enim.</p>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
