Finalized CF Napa case study.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TEST DOC</title>
+    <title>Eric Skram</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500,700/Fira+Mono:400/Crimson:400,600,400i,600i">
     <link rel="stylesheet" href="<% assetPath %>/css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header class="Header">
-        <!-- <section class="Container"> -->
+        <section class="Header-container">
             <a class="Header-logo" href="/"><h1 class="Header-name">Eric Skram</h1></a>
             <ul class="Nav">
-                <li class="Nav-item"><a class="Nav-link" href="#">Work</a></li>
-                <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li>
+                <li class="Nav-item"><a class="Nav-link" href="/">Work</a></li>
+                <!-- <li class="Nav-item"><a class="Nav-link" href="#">Blog</a></li> -->
             </ul>
-        <!-- </section> -->
+        </section>
     </header>
     <div class="Content">
         <ul class="ProjectGrid">
@@ -64,7 +64,7 @@
                     <div class="Macys-bg"></div>
                     <div class="GridItem-info">
                         <h2 class="GridItem-title">Macy's.com Mobile App</h2>
-                        <p class="GridItem-description">UI / UX / Prototyping</p>
+                        <div class="GridItem-description">UI / UX / Prototyping</div>
                     </div>
                 </a>
             </li>
@@ -76,7 +76,7 @@
                     <div class="Recipes-bg"></div>
                     <div class="GridItem-info">
                         <h2 class="GridItem-title">Recipes</h2>
-                        <p class="GridItem-description">UI / UX / Development</p>
+                        <div class="GridItem-description">UI / UX / Development</div>
                     </div>
                 </a>
             </li>
