--- a/projects/cfnapa.html
+++ b/projects/cfnapa.html
@@ -26,7 +26,7 @@
             <div class="Project-mainPreview Project-mainPreview--CFN"></div>
         </div>
         <div class="Project-body">
-            <blockquote class="Project-description">
+            <blockquote class="Project-summary">
                 <p>CF Napa is one of California's premier wine branding agencies. They approached me to convert their Flash site to a more scalable platform. The new site was developed to be faster and more maintainable. It uses a Wordpress backend and DB coupled to a Timber/Twig frontend.</p>
             </blockquote>
 
