Minor CSS refactor to combine styles.

--- a/projects/macys.html
+++ b/projects/macys.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <section class="Project-block MacysStrategy">
-                <h2 class="MacysStrategy-title">Strategy</h2>
+                <h2 class="Project-block-title MacysStrategy-title">Strategy</h2>
                 <div class="MacysStrategy-description">
                     <p>We narrowed our high-level target consumer from &lsquo;millennials&rsquo; to female iOS users within that age group. iOS was chosen since it accounts for the majority of mobile traffic (64%) and revenue (80%) on Macy's.com. We pulled qualitative data from Macy's survey responses that matched our consumer and used this as the basis for our need-finding. We found some commonalities in their responses:</p>
                     <blockquote class="MacysStrategy-quote">
@@ -51,7 +51,7 @@
                 </div>
             </section>
             <section class="Project-block MacysEpics">
-                <h2 class="MacysEpics-title">Epics &amp; User Flow</h2>
+                <h2 class="Project-block-title MacysEpics-title">Epics &amp; User Flow</h2>
                 <div class="MacysEpics-description">
                     <p>We broke these challenges down into epics and came up with a rough feature list for each. The epics also made good logical separators when designing the user flow. </p>
                 </div>
@@ -87,12 +87,12 @@
             </section>
             <section class="Project-block Project-block--fw MacysPrototyping">
                 <div class="MacysPrototyping-description">
-                    <h2 class="MacysPrototyping-title">Wireframing &amp; Prototyping</h2>
+                    <h2 class="Project-block-title MacysPrototyping-title">Wireframing &amp; Prototyping</h2>
                     <p>To promote rapid iteration, the first set of wires were done on a whiteboard. After narrowing down our options, I made paper prototypes to begin getting a feel for the interactions. Sticky notes proved really useful for showing stateful components.</p>
                 </div>
             </section>
             <section class="Project-block MacysDiscovery">
-                <h2 class="MacysDiscovery-title">Discover Products</h2>
+                <h2 class="Project-block-title MacysDiscovery-title">Discover Products</h2>
                 <div class="MacysDiscovery-description">
                     <p>To ease product discovery on mobile devices, we needed to rethink the traditional product grid. Using smart recommendations paired to a Tinder style gesture-controlled interface, we can show larger previews while still delivering relevant results. All the page's functionality can be accessed through swiping in any direction.</p>
                 </div>
@@ -130,7 +130,7 @@
             <section class="Project-block Project-block--fw MacysAssistance">
                 <div class="MacysAssistance-container">
                     <div class="MacysAssistance-description">
-                        <h2 class="MacysAssistance-title">Get Assistance</h2>
+                        <h2 class="Project-block-title MacysAssistance-title">Get Assistance</h2>
                         <p>The majority of negative customer feedback gathered by Macy's revolves around customers not receiving help promptly or not being able to find an associate. We included an &lsquo;assist me&rsquo; feature in the app to combat this. A customer can notify an associate of what they need, or just call directly. </p>
                     </div>
                     <div class="MacysAssistance-mock">
@@ -139,7 +139,7 @@
                 </div>
             </section>
             <section class="Project-block MacysMapping">
-                <h2 class="MacysMapping-title">Finding Products in Store</h2>
+                <h2 class="Project-block-title MacysMapping-title">Finding Products in Store</h2>
                 <div class="MacysMapping-description">
                     <p>A major challenge with department store shopping is finding specific items. Using Bluetooth LE beacons, products can be mapped to individual racks and marked for easy discovery. This, in tandem with RFID tags attached to each item, could provide real-time inventory tracking.</p>
                     <img src="<% assetPath %>/images/Macys-Case-MapMock.jpg" alt="">
@@ -151,7 +151,7 @@
             <section class="Project-block Project-block MacysRewards">
 
                 <div class="MacysRewards-description">
-                    <h2 class="MacysRewards-title">Earn Rewards</h2>
+                    <h2 class="Project-block-title MacysRewards-title">Earn Rewards</h2>
                     <p>The wishlist feature on Macy's.com converts very well, but is underutilized and is even supressed on some platforms. Our idea would be very effective working in tandem with the wishlist and could be used to promote it to a broader audience. We introduced a more robust rewards system for items purchased from the wishlist, using both discounts and experiential prizes.</p>
                 </div>
                 <div class="MacysRewards-mock">
