Finish Registration case.

--- a/projects/macys.html
+++ b/projects/macys.html
@@ -29,7 +29,7 @@
                 </blockquote>
                 <div class="Overview-scope">
                     <h3 class="Overview-title">Scope</h3>
-                    <p class="Overview-item">iOS app</p>
+                    <p class="Overview-item">Research, iOS app, Presentation</p>
                     <h3 class="Overview-title">Tools</h3>
                     <p class="Overview-item">Paper Prototypes, Sketch, Photoshop</p>
                 </div>
@@ -147,8 +147,7 @@
                     <img src="<% assetPath %>/images/Macys-Case-MapPhone.png" alt="">
                 </div>
             </section>
-            <section class="Project-block Project-block MacysRewards">
-
+            <section class="Project-block MacysRewards">
                 <div class="MacysRewards-description">
                     <h2 class="Project-block-title MacysRewards-title">Earn Rewards</h2>
                     <p>The wishlist feature on Macy's.com converts very well, but is underutilized and is even supressed on some platforms. Our idea would be very effective working in tandem with the wishlist and could be used to promote it to a broader audience. We introduced a more robust rewards system for items purchased from the wishlist, using both discounts and experiential prizes.</p>
